Slowly filling out content

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h3>University of Illinois at Urbana-Champaign</h3>
         <div id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
         <div id="location">Champaign, IL</div>
-          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering with a minor in Mathematics, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group on campus within my Professional Business Fraternity Phi Chi Theta, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends showing me something new that they have learned through their experiences, or learning from one of my many fine professors, I am always absorbing new information to further me as a person and a professional.</p>
+          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group within my business fraternity on campus, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
@@ -116,7 +116,7 @@
         <div class="standardTextAlignCenter" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
         <div class="standardTextAlignCenter" id="location">Champaign, IL</div>
         <p>
-          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering with a minor in Mathematics, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group on campus within my Professional Business Fraternity Phi Chi Theta, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends showing me something new that they have learned through their experiences, or learning from one of my many fine professors, I am always absorbing new information to further me as a person and a professional.</p>
+          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group within my business fraternity on campus, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
         </p>
       </div>
       <div class="col-xs-1"></div>
@@ -169,7 +169,7 @@
         <h3>Pivotal Labs</h3>
         <div id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div id="location">Chicago, IL</div>
-          <p>Pivotal Labs is a programming consulting company that teaches larger corporations how to adapt to an agile software development cycle. They pair program side by side with clients, showing them how valuable test driven development and pair programming are, all while building an application that can be eventually handed off to the client.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. I was able to quickly learn and contribute to our React/Redux web application, and I became a better programmer in the process by seeing how my team tackles problems through pair programming. I became a more well-rounded developer, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
+          <p>Pivotal Labs is a programming consulting company that teaches clients how to program in an agile software development cycle.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. Even though I was unfamiliar with the technology stack we were using, I was able to quickly learn and contribute like a true Pivot. I became a more well-rounded developer, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
@@ -181,7 +181,7 @@
         <div class="standardTextAlignCenter" id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
-          <p>Pivotal Labs is a programming consulting company that teaches larger corporations how to adapt to an agile software development cycle. They pair program side by side with clients, showing them how valuable test driven development and pair programming are, all while building an application that can be eventually handed off to the client.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. I was able to quickly learn and contribute to our React/Redux web application, and I became a better programmer in the process by seeing how my team tackles problems through pair programming. I became a more well-rounded developer, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
+          <p>Pivotal Labs is a programming consulting company that teaches clients how to program in an agile software development cycle.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. Even though I was unfamiliar with the technology stack we were using, I was able to quickly learn and contribute like a true Pivot. I became a more well-rounded developer, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
         </p>
       </div>
       <div class="col-xs-1"></div>
@@ -201,7 +201,7 @@
         <h3>Citadel LLC</h3>
         <div id="subtitle">Citadel Technology Intern, Summer 2015</div>
         <div id="location">Chicago, IL</div>
-          <p>Citadel is hedge fund located in Chicago, and is a leading investor in financial markets around the world. Citadel Technology was a business within Citadel that took their trading application, and marketed it and sold to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team for Citadel Technology. Seeing how software development works in the workplace for the first time, I helped automate software environment checks, optimize existing scripts, and even create my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that your best way to learn a new language or framework is through constant testing and refactoring. Teaching myself threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
+          <p>Citadel is hedge fund located in Chicago, and is a leading investor in financial markets around the world. The sector that I worked in, Citadel Technology, was a business that marketed and sold their trading application to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team in CTECH. Getting to see how software development worked in the workplace for the first time, I helped automate software environment checks, optimized existing scripts, and even created my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that the best way to learn coding is through simply playing around with unfamiliar technologies. Teaching myself the concept of threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
@@ -225,7 +225,7 @@
         <div class="standardTextAlignCenter" id="subtitle">Citadel Technology Intern, Summer 2015</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
-          <p>Citadel is hedge fund located in Chicago, and is a leading investor in financial markets around the world. Citadel Technology was a business within Citadel that took their trading application, and marketed it and sold to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team for Citadel Technology. Seeing how software development works in the workplace for the first time, I helped automate software environment checks, optimize existing scripts, and even create my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that your best way to learn a new language or framework is through constant testing and refactoring. Teaching myself threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
+          <p>Citadel is hedge fund located in Chicago, and is a leading investor in financial markets around the world. The sector that I worked in, Citadel Technology, was a business that marketed and sold their trading application to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team in CTECH. Getting to see how software development worked in the workplace for the first time, I helped automate software environment checks, optimized existing scripts, and even created my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that the best way to learn coding is through simply playing around with unfamiliar technologies. Teaching myself the concept of threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
         </p>
       </div>
       <div class="col-xs-1"></div>
@@ -368,74 +368,74 @@
       <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 photoContainer">
   
   <div class="photo">
-    <a href="./static/photoGallery/lakePiney.JPG" data-fancybox="images" data-caption="Lake Piney in Colorado, Summer 2015">
-        <img src="./static/photoGallery/lakePiney_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/lakePiney.JPG" data-fancybox="images" data-caption="Lake Piney in Colorado" class="round">
+        <img src="./static/photoGallery/lakePiney_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/pisaYard.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/pisaYard_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/pisaYard.JPG" data-fancybox="images" data-caption="Piazza Dei Miracoli aka Field of Miracles in Pisa, Italy" class="round">
+        <img src="./static/photoGallery/pisaYard_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/pisaTown.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/pisaTown_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/pisaTown.JPG" data-fancybox="images" data-caption="Arno River in Pisa, Italy" class="round">
+        <img src="./static/photoGallery/pisaTown_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/florence.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/florence_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/florence.JPG" data-fancybox="images" data-caption="The Abbey of San Miniato al Monte in Florence, Italy" class="round">
+        <img src="./static/photoGallery/florence_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/cinqueTerra.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/cinqueTerra_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/cinqueTerra.JPG" data-fancybox="images" data-caption="Cinque Terra in Italy" class="round">
+        <img src="./static/photoGallery/cinqueTerra_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/leaningTowerView.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/leaningTowerView_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/swedenSwim.JPG" data-fancybox="images" data-caption="Swimming in Oresund near Glumslov, Sweden" class="round">
+        <img src="./static/photoGallery/swedenSwim_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/swedenSwim.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/swedenSwim_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/sweden.JPG" data-fancybox="images" data-caption="Glumslov, Sweden with my great host David" class="round">
+        <img src="./static/photoGallery/sweden_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/sweden.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/sweden_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/wimbledon.JPG" data-fancybox="images" data-caption="Wimbledon in London, U.K." class="round">
+        <img src="./static/photoGallery/wimbledon_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/wimbledon.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/wimbledon_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/paris.JPG" data-fancybox="images" data-caption="Ponte des Arts in Paris, France" class="round">
+        <img src="./static/photoGallery/paris_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/paris.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/paris_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/vatican.JPG" data-fancybox="images" data-caption="Sunday mass at the Vatican in Rome, Italy" class="round">
+        <img src="./static/photoGallery/vatican_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/florenceBridge.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/florenceBridge_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/venice.JPG" data-fancybox="images" data-caption="Streets of Venice, Italy" class="round">
+        <img src="./static/photoGallery/venice_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
   <div class="photo">
-    <a href="./static/photoGallery/vatican.JPG" data-fancybox="images" data-caption="">
-        <img src="./static/photoGallery/vatican_sm.JPG" height="150px" width="150px"/>
+    <a href="./static/photoGallery/switz.JPG" data-fancybox="images" data-caption="Lake Geneva in Lausanne, Switzerland" class="round">
+        <img src="./static/photoGallery/switz_sm.JPG" height="150px" width="150px" class="round"/>
     </a>
   </div>
   
