Slowly filling out content

--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3 class="standardTextAlignCenter">University of Illinois at Urbana-Champaign</h3>
         <div class="standardTextAlignCenter" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
         <div class="standardTextAlignCenter" id="location">Champaign, IL</div>
@@ -119,7 +118,6 @@
           <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group within my business fraternity on campus, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends sharing their experiences with me, or learning from one of my many fine professors, I am always absorbing new information to grow as a person and a professional.</p>
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   <div class="row space"></div><div class="row space"></div>
     <div class="row">
@@ -146,8 +144,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3  class="standardTextAlignCenter">Echelon Consulting</h3>
         <div class="standardTextAlignCenter" id="subtitle">Software Engineer Intern, Summer 2017</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
@@ -155,7 +152,6 @@
           lorem ipsum
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   <div class="row space"></div><div class="row space"></div>
         <div class="row">
@@ -175,8 +171,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3 class="standardTextAlignCenter">Pivotal Labs</h3>
         <div class="standardTextAlignCenter" id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
@@ -184,7 +179,6 @@
           <p>Pivotal Labs is a programming consulting company that teaches clients how to program in an agile software development cycle.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. Even though I was unfamiliar with the technology stack we were using, I was able to quickly learn and contribute like a true Pivot. I became a more well-rounded developer, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   
   <div class="row space standardTextAlignCenter">
@@ -219,8 +213,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3  class="standardTextAlignCenter">Citadel LLC</h3>
         <div class="standardTextAlignCenter" id="subtitle">Citadel Technology Intern, Summer 2015</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
@@ -228,7 +221,6 @@
           <p>Citadel is hedge fund located in Chicago, and is a leading investor in financial markets around the world. The sector that I worked in, Citadel Technology, was a business that marketed and sold their trading application to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team in CTECH. Getting to see how software development worked in the workplace for the first time, I helped automate software environment checks, optimized existing scripts, and even created my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that the best way to learn coding is through simply playing around with unfamiliar technologies. Teaching myself the concept of threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   </div>
 <a href="#projects"></a>
@@ -259,8 +251,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3 class="standardTextAlignCenter">Raspberry Pi Google Calendar TV Alarm</h3>
         <div class="standardTextAlignCenter" id="subtitle">Spring 2017</div>
         <div class="standardTextAlignCenter" id="location"></div>
@@ -268,7 +259,6 @@
           lorem ipsum
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   <div class="row space"></div><div class="row space"></div>
     <div class="row">
@@ -295,8 +285,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3  class="standardTextAlignCenter">Fantasy Sports Lineup Generator</h3>
         <div class="standardTextAlignCenter" id="subtitle">Fall 2016</div>
         <div class="standardTextAlignCenter" id="location"></div>
@@ -304,7 +293,6 @@
           lorem ipsum
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   <div class="row space"></div><div class="row space"></div>
         <div class="row">
@@ -324,8 +312,7 @@
     </div>
     <div class="row space hidden-lg hidden-md hidden-sm"></div>
     <div class="row hidden-lg hidden-md hidden-sm">
-      <div class="col-xs-1"></div>
-      <div class="col-xs-10">
+      <div class="col-xs-12 mobilePadding">
         <h3 class="standardTextAlignCenter">Personal Website and Photo Album</h3>
         <div class="standardTextAlignCenter" id="subtitle">Spring 2017</div>
         <div class="standardTextAlignCenter" id="location"></div>
@@ -333,7 +320,6 @@
           lorem ipsum
         </p>
       </div>
-      <div class="col-xs-1"></div>
     </div>
   </div>
 <a href="#travel"></a>
