--- a/index.html
+++ b/index.html
@@ -463,10 +463,15 @@
   
 <div class="row space">
       <div class="col-lg-3 col-md-3 col-sm-2 col-xs-0"></div>
-      <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 photoContainer standardTextAlignCenter">
+      <div class="col-lg-6 col-md-6 col-sm-8 hidden-xs photoContainer standardTextAlignCenter standardMarginTop">
         <a href="./static/Greg_Murray.pdf" target="_blank"><img class="bottomImg" src="./static/images/resumeIcon.png"/></a>
         <a href="mailto:greg.murray20@gmail.com"> <img class="bottomImg" src="./static/images/emailIcon.svg"/></a>
         <a href="http://www.linkedin.com/in/gmurray20" target="_blank"><img class="bottomImg" src="./static/images/linkedInIcon.png"/></a>
+      </div>
+      <div class="hidden-lg hidden-md hidden-sm col-xs-12 photoContainer standardTextAlignCenter standardMarginTop">
+        <a href="./static/Greg_Murray.pdf" target="_blank"><img class="mobileBottomImg" src="./static/images/resumeIcon.png"/></a>
+        <a href="mailto:greg.murray20@gmail.com"> <img class="mobileBottomImg" src="./static/images/emailIcon.svg"/></a>
+        <a href="http://www.linkedin.com/in/gmurray20" target="_blank"><img class="mobileBottomImg" src="./static/images/linkedInIcon.png"/></a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-2 col-xs-0"></div>
     </div>
