--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
       <div class="col-lg-6 col-md-6 col-sm-8 col-xs-10">
         <h3 id="travelDescription">
-          Contrary to popular belief, I do have a life outside of CS. I love to travel and meet new people. Here are some of my favorite memories over the years.
+          I love to travel and meet new people. Here are some of my favorite memories over the years.
         </h3>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
